objects/CN_Sample_Product__c.object
<CustomObject>
    <fields>
        <fullName>CN_Account_Id__c</fullName>
        <formula>CASESAFEID(CN_Sample_Request__r.CN_Account_Name__r.Id)</formula>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Campaign_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Product</label>
        <referenceTo>CN_Campaign_Product__c</referenceTo>
        <relationshipLabel>Sample Products</relationshipLabel>
        <relationshipName>Sample_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Current_Status_Date__c</fullName>
        <label>Current Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Current_Status_For_Report__c</fullName>
        <formula>IF( 
    ISBLANK(TEXT(CN_Current_Status__c)), 
    IF( CN_Is_Overdue__c, &apos;6-overdue&apos;, &apos;5-no Feedback(&lt;14D)&apos;),
    CASE(TEXT(CN_Current_Status__c),&apos;Ordered&apos;,&apos;1-ordered&apos;,&apos;Win&apos;,&apos;2-win&apos;,&apos;Under Negotiation&apos;,&apos;3-Under Negotiation&apos;,&apos;Failed&apos;,&apos;4-Failed&apos;,&apos;&apos;)
)</formula>
        <label>Current Status For Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Current_Status__c</fullName>
        <label>Current Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ordered</fullName>
                </value>
                <value>
                    <fullName>Win</fullName>
                </value>
                <value>
                    <fullName>Under Negotiation</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Customer_Code__c</fullName>
        <formula>CN_Sample_Request__r.CN_Account_Name__r.CN_Customer_Code__c</formula>
        <label>Customer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Customer_Feedback__c</fullName>
        <label>Customer Feedback</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Customer_Name__c</fullName>
        <formula>CN_Sample_Request__r.CN_Account_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Customer_Sales_Team__c</fullName>
        <formula>CN_Sample_Request__r.CN_Account_Name__r.CN_Sales_Team_UI__r.Name</formula>
        <label>Customer Sales Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Delivery_Comments__c</fullName>
        <label>Delivery Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CN_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CN_Feedback_Date__c</fullName>
        <label>Feedback Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Feedback_Description__c</fullName>
        <label>Feedback Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CN_Is_Created_Yesterday__c</fullName>
        <formula>DATEVALUE(CreatedDate ) = TODAY()-1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Created Yesterday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Is_Deliver_Done__c</fullName>
        <formula>CN_Sample_Request__r.CN_SP_Records_Count_All__c =  CN_Sample_Request__r.CN_SP_Records_Count_Delivery_Status_All__c &amp;&amp; CN_Sample_Request__r.CN_SP_Records_Count_All__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Deliver Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Is_My_Sample_Product__c</fullName>
        <formula>CN_Sample_Request__r.OwnerId = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is My Sample Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Is_Overdue__c</fullName>
        <formula>AND(
    CN_Is_Sample_Request_Approved__c,
    ISPICKVAL(CN_Status_of_Delivery__c, &quot;Done&quot;),
    IF( 
        ISBLANK(CN_Current_Status_Date__c) &amp;&amp; ISBLANK(CN_Feedback_Date__c),  
        (TODAY() -  CN_Sample_Request__r.CN_Sample_Needed_Date__c) &gt; 14, 
        IF(
             ISBLANK(CN_Current_Status_Date__c), 
            (CN_Feedback_Date__c -  CN_Sample_Request__r.CN_Sample_Needed_Date__c) &gt; 14 ,
            (CN_Current_Status_Date__c -  CN_Sample_Request__r.CN_Sample_Needed_Date__c) &gt; 14
         )
    )
)</formula>
        <label>Is Overdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Is_Repack_Sample__c</fullName>
        <formula>CN_Sample_Request__r.RecordType.DeveloperName = &quot;CN_Office_Repack&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Test Sample</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Is_Sample_Request_Approved__c</fullName>
        <formula>ISPICKVAL(CN_Sample_Request__r.CN_Sample_Request_Status__c , &quot;Approved&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Sample Request Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Item_ID__c</fullName>
        <formula>CN_Product__r.CN_SKU_Code__c</formula>
        <label>Item ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_List_Price__c</fullName>
        <formula>IF( 
  
  CN_Sample_Request__r.RecordType.DeveloperName  = &apos;CN_Whole_Pack&apos;, 
  CN_Pricebook_Price__c,
  CN_Sample_Unit_List_Price__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Pricebook_Price__c</fullName>
        <label>Pricebook Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Product_Brand__c</fullName>
        <formula>TEXT(CN_Product__r.CN_Brand__c)</formula>
        <label>Product Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Sample Products</relationshipLabel>
        <relationshipName>Sample_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Qty_per_Carton__c</fullName>
        <formula>CN_Product__r.CN_Qty_per_Carton__c</formula>
        <label>Qty per Carton</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Quantity_Needed__c</fullName>
        <label>Quantity Needed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Real_Quantity__c</fullName>
        <inlineHelpText>If the Real Quantity equal to zero or blank ,it will be populated with Quantity Needed.</inlineHelpText>
        <label>Real Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Remark__c</fullName>
        <label>Remark</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CN_SKU_Chinese_Description__c</fullName>
        <formula>CN_Product__r.CN_SKU_Description_CN__c</formula>
        <label>SKU Chinese Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_SKU_English_Description__c</fullName>
        <formula>CN_Product__r.CN_SKU_Description_EN__c</formula>
        <label>SKU English Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Office__c</fullName>
        <formula>TEXT(CN_Sample_Request__r.CN_Account_Name__r.CN_Sales_Office__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Person_Id__c</fullName>
        <formula>CN_Sample_Request__r.CN_Account_Name__r.Owner.Id</formula>
        <label>Sales Person Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sample_Cost__c</fullName>
        <label>Sample Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Sample_Needed_Date__c</fullName>
        <formula>CN_Sample_Request__r.CN_Sample_Needed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sample Needed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Sample_Request_Type_Formula__c</fullName>
        <formula>CN_Sample_Request__r.RecordType.Name</formula>
        <label>Sample Request Type Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sample_Request_Type__c</fullName>
        <label>Sample Request Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sample_Request__c</fullName>
        <label>Sample Request</label>
        <referenceTo>CN_Sample_Request__c</referenceTo>
        <relationshipLabel>Sample Products</relationshipLabel>
        <relationshipName>Sample_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CN_Sample_SKU_Code__c</fullName>
        <formula>CN_Product__r.CN_SKU_Code__c</formula>
        <label>Sample SKU Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sample_Unit_List_Price__c</fullName>
        <formula>CN_Product__r.CN_Sample_Unit_List_Price__c</formula>
        <label>Sample Unit List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Sample_Unit__c</fullName>
        <formula>CN_Product__r.CN_Standard_Sample_Unit__c</formula>
        <label>Sample Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Status_of_Delivery__c</fullName>
        <label>Status of Delivery</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Done</fullName>
                </value>
                <value>
                    <fullName>Out of Stock</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Unit__c</fullName>
        <formula>if(  ISNULL(CN_Product__r.CN_Sales_Unit__c) || CN_Product__r.CN_Sales_Unit__c = &apos;&apos; ,  CN_Product__r.CN_Base_Unit_of_Measure__c , CN_Product__r.CN_Sales_Unit__c)</formula>
        <label>Unit</label>
        <type>Text</type>
    </fields>
    <label>Sample Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CN_Sample_Request_Type_Formula__c</columns>
        <columns>CN_Customer_Name__c</columns>
        <columns>CN_Product__c</columns>
        <columns>CN_Unit__c</columns>
        <columns>CN_Sample_Cost__c</columns>
        <columns>CN_Status_of_Delivery__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CN_My_Sample_Feedbacks_Repack</fullName>
        <columns>NAME</columns>
        <columns>CN_Sample_Request__c</columns>
        <columns>CN_Customer_Name__c</columns>
        <columns>CN_Product__c</columns>
        <columns>CN_SKU_Chinese_Description__c</columns>
        <columns>CN_Quantity_Needed__c</columns>
        <columns>CN_Status_of_Delivery__c</columns>
        <columns>CN_Delivery_Comments__c</columns>
        <columns>CN_Customer_Feedback__c</columns>
        <columns>CN_Feedback_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CN_Is_My_Sample_Product__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CN_Is_Sample_Request_Approved__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CN_Customer_Feedback__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CN_Sample_Product__c.CN_Sample_Product</value>
        </filters>
        <filters>
            <field>CN_Sample_Request_Type_Formula__c</field>
            <operation>equals</operation>
            <value>Office Test Sample</value>
        </filters>
        <label>My Sample Feedbacks - Test Sample</label>
        <sharedTo>
            <roleAndSubordinates>CN_Commercial_Director</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_My_Sample_Feedbacks_Sales_View</fullName>
        <columns>NAME</columns>
        <columns>CN_Sample_Request__c</columns>
        <columns>CN_Sample_Request_Type_Formula__c</columns>
        <columns>CN_Customer_Name__c</columns>
        <columns>CN_Product__c</columns>
        <columns>CN_SKU_Chinese_Description__c</columns>
        <columns>CN_Quantity_Needed__c</columns>
        <columns>CN_Status_of_Delivery__c</columns>
        <columns>CN_Delivery_Comments__c</columns>
        <columns>CN_Customer_Feedback__c</columns>
        <columns>CN_Feedback_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CN_Is_My_Sample_Product__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CN_Is_Sample_Request_Approved__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CN_Customer_Feedback__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CN_Sample_Product__c.CN_Sample_Product</value>
        </filters>
        <label>All My Sample Feedbacks</label>
        <sharedTo>
            <roleAndSubordinates>CN_Commercial_Director</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_My_Sample_Feedbacks_Whole_Pack</fullName>
        <columns>NAME</columns>
        <columns>CN_Sample_Request__c</columns>
        <columns>CN_Customer_Name__c</columns>
        <columns>CN_Product__c</columns>
        <columns>CN_SKU_Chinese_Description__c</columns>
        <columns>CN_Quantity_Needed__c</columns>
        <columns>CN_Real_Quantity__c</columns>
        <columns>CN_Status_of_Delivery__c</columns>
        <columns>CN_Delivery_Comments__c</columns>
        <columns>CN_Customer_Feedback__c</columns>
        <columns>CN_Feedback_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CN_Is_My_Sample_Product__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CN_Is_Sample_Request_Approved__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CN_Customer_Feedback__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CN_Sample_Product__c.CN_Sample_Product</value>
        </filters>
        <filters>
            <field>CN_Sample_Request_Type_Formula__c</field>
            <operation>equals</operation>
            <value>Whole Pack</value>
        </filters>
        <label>My Sample Feedbacks - Whole Pack</label>
        <sharedTo>
            <roleAndSubordinates>CN_Commercial_Director</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_Repack_Sample_Products_CCE_View</fullName>
        <columns>NAME</columns>
        <columns>CN_Sample_Request__c</columns>
        <columns>CN_Sales_Office__c</columns>
        <columns>CN_Customer_Sales_Team__c</columns>
        <columns>CN_Sample_Needed_Date__c</columns>
        <columns>CN_Customer_Name__c</columns>
        <columns>CN_Product__c</columns>
        <columns>CN_SKU_Chinese_Description__c</columns>
        <columns>CN_Quantity_Needed__c</columns>
        <columns>CN_Sample_Unit_List_Price__c</columns>
        <columns>CN_Sample_Unit__c</columns>
        <columns>CN_Real_Quantity__c</columns>
        <columns>CN_Status_of_Delivery__c</columns>
        <columns>CN_Delivery_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CN_Is_Sample_Request_Approved__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CN_Status_of_Delivery__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CN_Is_Repack_Sample__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CN_Sample_Product__c.CN_Sample_Product</value>
        </filters>
        <label>Test Sample Products (CCE View)</label>
        <sharedTo>
            <roleAndSubordinates>CN_Marketing</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SP-{0000000000}</displayFormat>
        <label>Sample Product</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Products</pluralLabel>
    <recordTypes>
        <fullName>CN_Sample_Product</fullName>
        <active>true</active>
        <label>CN Sample Product</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CN_Check_Deliver_Status_After_Done</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
CN_Is_Deliver_Done__c,
 CN_Is_Sample_Request_Approved__c ,
 ISCHANGED(CN_Status_of_Delivery__c ) 
)</errorConditionFormula>
        <errorDisplayField>CN_Status_of_Delivery__c</errorDisplayField>
        <errorMessage>It&apos;s not allowed to change deliver status after all sample product deliver status had been selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Check_FeedBack</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
 NOT(ISPICKVAL(CN_Status_of_Delivery__c  , &quot;Done&quot;)),
 ISCHANGED( CN_Customer_Feedback__c ) || ISNEW(),
 NOT(ISPICKVAL(CN_Customer_Feedback__c , &quot;&quot;))
)</errorConditionFormula>
        <errorDisplayField>CN_Customer_Feedback__c</errorDisplayField>
        <errorMessage>Fill in customer feedback after sample delivered.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Check_Feedback_Message</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  ISPICKVAL(CN_Customer_Feedback__c , &quot;&quot;) ,
   NOT(ISBLANK( CN_Feedback_Description__c ) )
)</errorConditionFormula>
        <errorDisplayField>CN_Feedback_Description__c</errorDisplayField>
        <errorMessage>Please select Customer Feedback</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Check_Product_Active</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
ISCHANGED( CN_Product__c ),
NOT( CN_Product__r.IsActive )
)</errorConditionFormula>
        <errorDisplayField>CN_Product__c</errorDisplayField>
        <errorMessage>Product is inactive</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Check_Product_Type</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
 CN_Is_Repack_Sample__c = true,
  CN_Product__r.Is_Repack_Sample__c = false
)</errorConditionFormula>
        <errorDisplayField>CN_Product__c</errorDisplayField>
        <errorMessage>This Product not support office pack</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Check_Repack_Deliver_Status_Edit</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
 OR(
   $Profile.Name = &quot;CN Sales&quot;,
   $Profile.Name = &quot;CN Sales Lead&quot;,
   $Profile.Name = &quot;CN Sales Manager&quot;
 ),
 CN_Is_Repack_Sample__c ,
 ISCHANGED(CN_Status_of_Delivery__c  ) ||  ISCHANGED( CN_Delivery_Comments__c ) 
)</errorConditionFormula>
        <errorDisplayField>CN_Status_of_Delivery__c</errorDisplayField>
        <errorMessage>Test Sample&apos;s deliver status is only updated by CCE</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Check_Sample_Quantity</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
 CN_Quantity_Needed__c &lt;= 0
)</errorConditionFormula>
        <errorDisplayField>CN_Quantity_Needed__c</errorDisplayField>
        <errorMessage>Quantity Need must greater than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Check_Sample_Real_Quantity</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
NOT(ISCHANGED(CN_Quantity_Needed__c )),
OR(  
  CN_Real_Quantity__c &gt; CN_Quantity_Needed__c ,
  CN_Real_Quantity__c  &lt; 0
)
)</errorConditionFormula>
        <errorDisplayField>CN_Real_Quantity__c</errorDisplayField>
        <errorMessage>Real Quantity must greater than 0 and less than Quantity Needed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Check_Test_Sample_Quantity_Decimals</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
CN_Is_Repack_Sample__c,
MOD(CN_Quantity_Needed__c,1)&gt;0
)</errorConditionFormula>
        <errorDisplayField>CN_Quantity_Needed__c</errorDisplayField>
        <errorMessage>Test sample&apos;s Quantity Needed must be an integer</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Check_Test_Sample_R_Quantity_Decimals</fullName>
        <active>true</active>
        <description>Check Test Sample Real Quantity Decimals</description>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
CN_Is_Repack_Sample__c,
MOD( CN_Real_Quantity__c ,1)&gt;0
)</errorConditionFormula>
        <errorDisplayField>CN_Real_Quantity__c</errorDisplayField>
        <errorMessage>Test sample&apos;s Real Quantity must be an integer</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Check_Wholepack_Deliver_Status_Edit</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
 NOT(OR(
   $Profile.Name = &quot;CN Sales&quot;,
   $Profile.Name = &quot;CN Sales Lead&quot;,
   $Profile.Name = &quot;CN Sales Manager&quot;,
   CONTAINS($Profile.Name, &quot;CCE&quot;) 
 )),
 NOT(CN_Is_Repack_Sample__c ),
 ISCHANGED(CN_Status_of_Delivery__c  ) ||  ISCHANGED( CN_Delivery_Comments__c ) 
)</errorConditionFormula>
        <errorDisplayField>CN_Status_of_Delivery__c</errorDisplayField>
        <errorMessage>Wholepack Sample&apos;s deliver status is only updated by Sales Person or CCE</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Prevent_Create</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
ISNEW(),
 NOT(CN_Sample_Request__r.CN_Is_Draft__c )
)</errorConditionFormula>
        <errorMessage>It&apos;s not allowed to create new sample product after sample request ready approve or approved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Prevent_Edit_After_Ready</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  NOT(CN_Sample_Request__r.CN_Is_Draft__c), 
  OR(
    ISCHANGED(CN_Sample_Request__c),
    ISCHANGED(CN_Product__c),
    ISCHANGED(CN_Quantity_Needed__c),
    ISCHANGED(CN_Sample_Cost__c)
  )
)</errorConditionFormula>
        <errorMessage>It&apos;s not allow to edit when ready for approved, approved or canceled.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Prevent_Edit_Before_Approved</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  NOT(  ISPICKVAL(CN_Sample_Request__r.CN_Sample_Request_Status__c, &apos;Approved&apos;) ), 
  OR(
    NOT(ISBLANK(TEXT(CN_Status_of_Delivery__c))),
    NOT(ISBLANK(CN_Delivery_Comments__c)),
    NOT(ISBLANK(TEXT(CN_Current_Status__c))),
    NOT(ISBLANK(TEXT(CN_Customer_Feedback__c))),
    NOT(ISBLANK(CN_Feedback_Description__c)),
    AND( NOT(ISNEW()),ISCHANGED(CN_Real_Quantity__c))
  )
)</errorConditionFormula>
        <errorMessage>You can&apos;t edit sample deliver information before sample request is approved</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_SP_Check_Current_Status_Delivery</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  NOT(ISBLANK(  TEXT(CN_Current_Status__c) )),
  ISBLANK(TEXT(CN_Status_of_Delivery__c)) 
)</errorConditionFormula>
        <errorDisplayField>CN_Current_Status__c</errorDisplayField>
        <errorMessage>You must enter the delivery status before you enter the current status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_SP_Check_Current_Status_Sales</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  ISCHANGED(  CN_Current_Status__c ),
  NOT(OR(
    $Profile.Name = &quot;CN Sales&quot;,
    $Profile.Name = &quot;CN Sales Lead&quot;,
    $Profile.Name = &quot;CN Sales Manager&quot;
  )) 
)</errorConditionFormula>
        <errorDisplayField>CN_Current_Status__c</errorDisplayField>
        <errorMessage>You are not allowed to edit the current status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_SP_Check_Quantity_Needed_Decimals</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
MOD(CN_Quantity_Needed__c,0.01)&gt;0
)</errorConditionFormula>
        <errorDisplayField>CN_Quantity_Needed__c</errorDisplayField>
        <errorMessage>Quantity needed allows a maximum of two decimals</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_SP_Check_Real_Quantity_Decimals</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
MOD( CN_Real_Quantity__c ,0.01)&gt;0
)</errorConditionFormula>
        <errorDisplayField>CN_Real_Quantity__c</errorDisplayField>
        <errorMessage>Real Quantity allows a maximum of two decimals</errorMessage>
    </validationRules>
</CustomObject>